--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -107,6 +107,8 @@ harbor_docker_image: rivernet/docker:stable-dind
 ara_image: rivernet/ara:4.2
 # ECP - HybridJob Controller
 hybridjob_image: rivernet/hybridjob-controller:4.2
+# ECP - nvidia smi exporter
+nvidia_smi_exporter: rivernet/nvidia-smi-exporter:8.0-runtime-ubuntu14.04
 # ECP - Email for alert
 email_host: smtp.xxx.com
 email_sender: xxx@example.com
