add mysql chart

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -150,6 +150,8 @@ app_images:
   - docker.io/rivernet/curl:latest
   - docker.io/rivernet/tomcat:8.0.47-r0
   - docker.io/rivernet/mnist-demo:4.2
+  - docker.io/rivernet/mysql:5.7.20
+  - docker.io/rivernet/mysqld-exporter:latest
 
 # Harbor registry
 insecure_registry: registry.harbor:5000
