support scaleup and scaledown

--- a/roles/prerequisite/tasks/image.yml
+++ b/roles/prerequisite/tasks/image.yml
@@ -10,3 +10,5 @@
 - include_tasks: charts_image.yml
   when: "'masters' in group_names"
 
+- include_tasks: cluster_image.yml
+  when: "'new_workers' in group_names"
