--- a/roles/prerequisite/tasks/offline.yml
+++ b/roles/prerequisite/tasks/offline.yml
@@ -3,10 +3,9 @@
   file: path={{ rpm_dir }} state=directory
 
 - name: Copy rpm files to all hosts
-  synchronize:
+  copy:
     src: "{{ item }}/"
     dest: "{{ rpm_dir }}"
-    checksum: yes
   with_items:
     - "{{ docker_rpms_dir }}"
     - "{{ rsync_rpms_dir }}"
