--- a/roles/master/tasks/master.yml
+++ b/roles/master/tasks/master.yml
@@ -2,12 +2,9 @@
 - name: Copy kubeadm.yaml file
   template: src=kubeadm.yaml.j2  dest={{ kubeadm_config }}
 
-- name: Copy scheduler rbac file
-  template: src=rbac.yaml.j2  dest=/etc/kubernetes/scheduler-rbac.yaml
-
 - name: Init Kubernetes cluster
   shell: |
-    kubeadm init --config={{ kubeadm_config }} --skip-preflight-checks
+    kubeadm init --config={{ kubeadm_config }} --ignore-preflight-errors=CRI
   register: init_cluster
 
 - name: Create Kubernetes config directory
@@ -31,34 +28,44 @@
   until: get_node_result.rc == 0
   retries: 50
   delay: 5
+  
+- name: Wait until apiserver starts to run
+  shell: |
+    kubectl --kubeconfig={{ kubeadmin_config }} \
+            get po kube-apiserver-{{ ansible_hostname }} --namespace=kube-system --no-headers=true
+  register: check_apiserver
+  until: check_apiserver.rc == 0 and check_apiserver.stdout.find("Running") != -1
+  retries: "{{ pod_run_retry | int }}"
+  delay: "{{ pod_run_retry_delay | int }}"
+  
+- name: Wait until controller manager starts to run
+  shell: |
+    kubectl --kubeconfig={{ kubeadmin_config }} \
+            get po kube-controller-manager-{{ ansible_hostname }} --namespace=kube-system --no-headers=true
+  register: check_controller
+  until: check_controller.rc == 0 and check_controller.stdout.find("Running") != -1
+  retries: "{{ pod_run_retry | int }}"
+  delay: "{{ pod_run_retry_delay | int }}"
+  
+- name: Wait until scheduler starts to run
+  shell: |
+    kubectl --kubeconfig={{ kubeadmin_config }} \
+            get po kube-scheduler-{{ ansible_hostname }} --namespace=kube-system --no-headers=true
+  register: check_scheduler
+  until: check_scheduler.rc == 0 and check_scheduler.stdout.find("Running") != -1
+  retries: "{{ pod_run_retry | int }}"
+  delay: "{{ pod_run_retry_delay | int }}"
 
-- name: Remove node restrictions
-  replace:
-    path: /etc/kubernetes/manifests/kube-apiserver.yaml
-    regexp: ',NodeRestriction,ResourceQuota'
-    replace: ''
-
-- name: Remove node authorization
-  replace:
-    path: /etc/kubernetes/manifests/kube-apiserver.yaml
-    regexp: '--authorization-mode=.*$'
-    replace: '--authorization-mode=RBAC'
-
-- name: Restart kubelet and docker
-  systemd:
-    name: "{{ item }}"
-    state: restarted
-  with_items:
-    - kubelet
-    - docker
- 
-- name: Wait until node is available
-  shell: kubectl get no | grep {{ ansible_hostname }}
-  register: get_node_result
-  until: get_node_result.rc == 0
-  retries: 50
-  delay: 5
-
+- name: Wait until kube-proxy starts to run
+  shell: |
+    kubectl --kubeconfig={{ kubeadmin_config }} \
+            get po --namespace=kube-system --no-headers=true -l k8s-app=kube-proxy -o wide | grep {{ ansible_hostname }}
+  register: check_proxy
+  until: check_proxy.rc == 0 and check_proxy.stdout.find("Running") != -1
+  retries: "{{ pod_run_retry | int }}"
+  delay: "{{ pod_run_retry_delay | int }}"
+  run_once: true
+  
 - name: Taint master node
   when:
     - get_node_result|succeeded
@@ -74,10 +81,3 @@
   with_items:
     - "kubeadm.alpha.kubernetes.io/role=master"
     - "management=yes"
-
-- name: Recreate scheduler rbac
-  when:
-    - taint_master|succeeded
-  shell: |
-    kubectl delete -f /etc/kubernetes/scheduler-rbac.yaml
-    kubectl create -f /etc/kubernetes/scheduler-rbac.yaml
