--- a/roles/prerequisite/tasks/offline.yml
+++ b/roles/prerequisite/tasks/offline.yml
@@ -1,4 +1,18 @@
 ---
+- name: Uninstall old docker
+  when: ansible_os_family == "RedHat"
+  shell: |
+    yum remove -y docker \
+                  docker-client \
+                  docker-client-latest \
+                  docker-common \
+                  docker-latest \
+                  docker-latest-logrotate \
+                  docker-logrotate \
+                  docker-selinux \
+                  docker-engine-selinux \
+                  docker-engine
+
 - name: Create rpm directory
   file: path={{ rpm_dir }} state=directory
 
