allow scheduling on candidate nodes

--- a/roles/candidate/tasks/candidate.yml
+++ b/roles/candidate/tasks/candidate.yml
@@ -79,6 +79,12 @@
   retries: "{{ pod_run_retry | int }}"
   delay: "{{ pod_run_retry_delay | int }}"
   run_once: true
+  
+- name: Taint candidate node
+  when:
+    - get_node_result|succeeded
+  shell: |
+    kubectl taint nodes --all node-role.kubernetes.io/master-
 
 - name: Set master label
   shell: |
