fix docker options

--- a/roles/prerequisite/tasks/software.yml
+++ b/roles/prerequisite/tasks/software.yml
@@ -9,8 +9,8 @@
     - offline is defined
     - offline | bool
 
-- name: Copy Docker environment config file
-  template: src=docker.j2 dest={{ system_env_dir }}/docker
+- name: Config docker
+  template: sed -i 's@ExecStart=/usr/bin/dockerd@ExecStart=/usr/bin/dockerd \"--insecure-registry=registry.harbor:5000\"@' /lib/systemd/system/docker.service
 
 - name: Enable and restart Docker engine
   systemd:
