--- a/roles/nvidia/tasks/online.yml
+++ b/roles/nvidia/tasks/online.yml
@@ -5,14 +5,10 @@
     curl -s -L https://nvidia.github.io/nvidia-docker/$distribution/nvidia-docker.repo | \
     sudo tee /etc/yum.repos.d/nvidia-docker.repo
 
-- name: Install docker
+- name: Install nvidia docker
   when: ansible_os_family == "RedHat"
-  yum:
-    name: "{{ item }}"
-    update_cache: yes
-    state: present
-  with_items:
-    - nvidia-docker2
+  shell: |
+    yum install -y nvidia-docker2
     
 - name: Reload the Docker daemon configuration
   shell: |
