add variable: enable hybridjob

--- a/roles/ecp/tasks/main.yml
+++ b/roles/ecp/tasks/main.yml
@@ -79,8 +79,8 @@
 
 - name: Create hybridjob service
   when:
-    - ecp is defined
-    - ecp | bool
+    - hybridjob is defined
+    - hybridjob | bool
   import_tasks: hybridjob.yml
   tags:
     - ecp_hybridjob
