--- a/roles/prerequisite/tasks/main.yml
+++ b/roles/prerequisite/tasks/main.yml
@@ -8,3 +8,8 @@
   when:
     - offline is defined
     - offline | bool
+    
+- import_tasks: hybridjob.yml
+  when:
+    - hybridjob is defined
+    - hybridjob | bool
