--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -174,6 +174,8 @@ pod_run_retry_delay: 5
 # Enable ECP Enterprise version
 ecp: true
 #############################################################################
+# Enable hybridjob
+hybridjob: true
 # Enable Offline install
 offline: true
 # Docker image tar files
