--- a/roles/master/tasks/master.yml
+++ b/roles/master/tasks/master.yml
@@ -1,6 +1,9 @@
 ---
 - name: Copy kubeadm.yaml file
   template: src=kubeadm.yaml.j2  dest={{ kubeadm_config }}
+  
+- name: Copy scheduler rbac file
+  template: src=rbac.yaml.j2  dest=/etc/kubernetes/scheduler-rbac.yaml
 
 - name: Init Kubernetes cluster
   shell: |
@@ -81,3 +84,10 @@
   with_items:
     - "kubeadm.alpha.kubernetes.io/role=master"
     - "management=yes"
+    
+- name: Recreate scheduler rbac
+  when:
+    - taint_master|succeeded
+  shell: |
+    kubectl delete -f /etc/kubernetes/scheduler-rbac.yaml
+    kubectl create -f /etc/kubernetes/scheduler-rbac.yaml
