--- a/roles/common/vars/main.yml
+++ b/roles/common/vars/main.yml
@@ -5,3 +5,4 @@ worker_hosts: "{{ groups.workers | default([]) }}"
 cluster_hosts: "{{ groups.cluster | default([]) }}"
 new_worker_hosts: "{{ groups.new_workers | default([]) }}"
 glusterfs_hosts: "{{ groups.glusterfs | default([]) }}"
+gpu_hosts: "{{ groups.gpu | default([]) }}"
