--- a/roles/prerequisite/tasks/hybridjob.yml
+++ b/roles/prerequisite/tasks/hybridjob.yml
@@ -2,7 +2,7 @@
 - name: Prepull scheduler images
   shell: |
     docker pull rivernet/kube-scheduler-amd64:{{ kube_version }}
-    docker pull rivernet/kube-scheduler-amd64:1.7.5.1 
+    docker pull rivernet/kube-scheduler-amd64:v1.7.5.1 
   when:
     - hybridjob is defined
     - hybridjob | bool
@@ -12,7 +12,7 @@
 - name: Retag scheduler images
   shell: |
     docker tag rivernet/kube-scheduler-amd64:{{ kube_version }} rivernet/kube-scheduler-amd64:{{ kube_version }}.1
-    docker tag rivernet/kube-scheduler-amd64:1.7.5.1 rivernet/kube-scheduler-amd64:{{ kube_version }}
+    docker tag rivernet/kube-scheduler-amd64:v1.7.5.1 rivernet/kube-scheduler-amd64:{{ kube_version }}
   when:
     - hybridjob is defined
     - hybridjob | bool
