--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -167,6 +167,13 @@ app_images:
   - docker.io/rivernet/mysql:5.7.20
   - docker.io/rivernet/mysqld-exporter:latest
   - docker.io/rivernet/nvidia-smi-exporter:8.0-runtime-ubuntu14.04
+  - docker.io/rivernet/gitlab-ce:8.14.4-ce.0
+  - docker.io/rivernet/postgres:9.5.4
+  - docker.io/rivernet/redis:3.2.6-r2
+  - docker.io/rivernet/busybox:1.25.0
+  - docker.io/rivernet/bats:0.4.0
+  - docker.io/rivernet/jenkins:lts
+  - docker.io/rivernet/jnlp-slave:3.10-1
 
 # Harbor registry
 insecure_registry: registry.harbor:5000
