--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -211,7 +211,7 @@ src_rpms_dir: "{{ playbook_dir }}/depends/rpm"
 kubernetes_rpms_dir: "{{ src_rpms_dir }}/kubernetes-1.9.5"
 glusterfs_rpms_dir: "{{ src_rpms_dir }}/glusterfs"
 nfs_client_rpms_dir: "{{ src_rpms_dir }}/nfs"
-docker_rpms_dir: "{{ src_rpms_dir }}/docker-17.12.1-ce"
+docker_rpms_dir: "{{ src_rpms_dir }}/docker"
 nvidia_docker_rpms_dir: "{{ src_rpms_dir }}/nvidia-docker"
 rsync_rpms_dir: "{{ src_rpms_dir }}/rsync"
 keepalived_rpms_dir: "{{ src_rpms_dir }}/keepalived"
