add cronjob to mount sharedir

--- a/roles/sharedir/tasks/main.yml
+++ b/roles/sharedir/tasks/main.yml
@@ -9,6 +9,7 @@
 - name: Mount volume ecp_share to management hosts
   shell: |
     mount -t glusterfs {{ glusterfs_hosts[0] }}:ecp_share /ecp_share
+    echo "*/1 * * * * root mount -t glusterfs {{ glusterfs_hosts[0] }}:ecp_share /ecp_share" >> /etc/crontab
   when:
     - internal_glusterfs is defined
     - internal_glusterfs | bool
@@ -16,6 +17,7 @@
 - name: Mount nfs to management hosts
   shell: |
     mount -t nfs {{ nfs_server_shared_dir }} /ecp_share
+    echo "*/1 * * * * root mount -t nfs {{ nfs_server_shared_dir }} /ecp_share" >> /etc/crontab
   when:
     - internal_glusterfs is not defined or not internal_glusterfs | bool
     - nfs_server_shared_dir is defined
