--- a/roles/glusterfs/tasks/offline.yml
+++ b/roles/glusterfs/tasks/offline.yml
@@ -14,17 +14,18 @@
     dest: "{{ rpm_dir }}"
     checksum: yes
     
+- name: Get the list of rpms
+  shell: |
+    ls -d -1 {{ rpm_dir }}/*.rpm
+  register: rpm_list
+
 - name: Install offline package
   when:
     - ansible_os_family == "RedHat"
   yum:
     name: "{{ item }}"
     state: present
-  with_items:
-    - "{{ rpm_dir }}/attr-2.4.46-12.el7.x86_64.rpm"
-    - "{{ rpm_dir }}/glusterfs-client-xlators-3.8.4-18.4.el7.centos.x86_64.rpm"
-    - "{{ rpm_dir }}/glusterfs-libs-3.8.4-18.4.el7.centos.x86_64.rpm"
-    - "{{ rpm_dir }}/glusterfs-3.8.4-18.4.el7.centos.x86_64.rpm"
-    - "{{ rpm_dir }}/glusterfs-fuse-3.8.4-18.4.el7.centos.x86_64.rpm"
-    - "{{ rpm_dir }}/nfs-utils-1.3.0-0.48.el7_4.x86_64.rpm"
+  with_items: "{{ rpm_list.stdout_lines }}"
 
+- name: Remove rpms
+  file: path="{{ rpm_dir }}" state=absent
