--- a/roles/sharedir/tasks/main.yml
+++ b/roles/sharedir/tasks/main.yml
@@ -1,4 +1,12 @@
 ---
+- name: Create ecp directory
+  file: path={{ kube_ecp_dir }} state=directory
+
+- name: Copy mount shell
+  template: src={{ item }} dest={{ kube_ecp_dir }}/{{ item | basename | regex_replace('\.j2', '') }}
+  with_fileglob:
+    - ../templates/*.j2
+
 # create directory for ecp management node share data
 - name: Create ecp share directory
   file:
@@ -9,7 +17,8 @@
 - name: Mount volume ecp_share to management hosts
   shell: |
     mount -t glusterfs {{ glusterfs_hosts[0] }}:ecp_share /ecp_share
-    echo "*/1 * * * * root mount -t glusterfs {{ glusterfs_hosts[0] }}:ecp_share /ecp_share" >> /etc/crontab
+    sed -i -e "s/COMMAND/mount -t glusterfs {{ glusterfs_hosts[0] }}:ecp_share \/ecp_share/g" \
+                   {{ kube_ecp_dir }}/mount.sh
   when:
     - internal_glusterfs is defined
     - internal_glusterfs | bool
@@ -17,7 +26,8 @@
 - name: Mount nfs to management hosts
   shell: |
     mount -t nfs {{ nfs_server_shared_dir }} /ecp_share
-    echo "*/1 * * * * root mount -t nfs {{ nfs_server_shared_dir }} /ecp_share" >> /etc/crontab
+    sed -i -e "s/COMMAND/mount -t nfs {{ nfs_server_shared_dir }} \/ecp_share/g" \
+                   {{ kube_ecp_dir }}/mount.sh
   when:
     - internal_glusterfs is not defined or not internal_glusterfs | bool
     - external_nfs is defined
@@ -26,9 +36,15 @@
 - name: Mount external glusterfs to management hosts
   shell: |
     mount -t glusterfs {{ glusterfs_server_shared_vol }} /ecp_share
-    echo "*/1 * * * * root mount -t glusterfs {{ glusterfs_server_shared_vol }} /ecp_share" >> /etc/crontab
+    sed -i -e "s/COMMAND/mount -t glusterfs {{ glusterfs_server_shared_vol }} \/ecp_share/g" \
+                   {{ kube_ecp_dir }}/mount.sh
   when:
     - internal_glusterfs is not defined or not internal_glusterfs | bool
     - external_nfs is not defined or not external_nfs | bool
     - external_glusterfs is defined
     - external_glusterfs | bool
+
+- name: Set crontab
+  shell: |
+    chmod +x {{ kube_ecp_dir }}/mount.sh
+    echo "*/1 * * * * root {{ kube_ecp_dir }}/mount.sh " >> /etc/crontab
